--- a/build-config/pom.xml
+++ b/build-config/pom.xml
@@ -29,5 +29,9 @@
     <groupId>org.jboss.metadata</groupId>
     <artifactId>metadata-build-config</artifactId>
     <name>Metadata Build Configuration</name>
-    <version>10.0.2.Final-SNAPSHOT</version>
+    <version>10.0.2.Final</version>
+
+  <scm>
+    <tag>10.0.2.Final</tag>
+  </scm>
 </project>
