--- a/build-config/pom.xml
+++ b/build-config/pom.xml
@@ -29,5 +29,5 @@
     <groupId>org.jboss.metadata</groupId>
     <artifactId>metadata-build-config</artifactId>
     <name>Metadata Build Configuration</name>
-    <version>11.0.0.Beta2-SNAPSHOT</version>
+    <version>11.0.0.Final</version>
 </project>
