--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.jboss.metadata</groupId>
         <artifactId>jboss-as-parent-metadata</artifactId>
-        <version>11.0.0.Final</version>
+        <version>12.0.0.Alpha1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jboss-metadata-ear</artifactId>
