--- a/test/pom.xml
+++ b/test/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.jboss.metadata</groupId>
         <artifactId>jboss-as-parent-metadata</artifactId>
-        <version>12.0.0.Alpha1-SNAPSHOT</version>
+        <version>12.0.0.Beta1</version>
     </parent>
 
     <artifactId>jboss-metadata-test</artifactId>
