--- a/build-config/pom.xml
+++ b/build-config/pom.xml
@@ -23,15 +23,15 @@
     <parent>
         <groupId>org.jboss</groupId>
         <artifactId>jboss-parent</artifactId>
-        <version>25</version>
+        <version>35</version>
     </parent>
 
     <groupId>org.jboss.metadata</groupId>
     <artifactId>metadata-build-config</artifactId>
     <name>Metadata Build Configuration</name>
-    <version>13.0.0.Final</version>
+    <version>13.1.0.Final-SNAPSHOT</version>
 
   <scm>
-    <tag>13.0.0.Final</tag>
+    <tag>13.1.0.Final-SNAPSHOT</tag>
   </scm>
 </project>
