--- a/test/pom.xml
+++ b/test/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.jboss.metadata</groupId>
         <artifactId>jboss-as-parent-metadata</artifactId>
-        <version>13.0.0.Final</version>
+        <version>13.1.0.Final-SNAPSHOT</version>
     </parent>
 
     <artifactId>jboss-metadata-test</artifactId>
