--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
 jdk:
-    - oraclejdk8
-    - oraclejdk9
+  - oraclejdk11
+install:  
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -Dcommunity -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2
+script:
+  - mvn test -B -Dcommunity -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2
