--- a/source-transform/common/pom.xml
+++ b/source-transform/common/pom.xml
@@ -26,46 +26,21 @@
 
     <parent>
         <groupId>org.jboss.metadata</groupId>
-        <artifactId>jboss-as-parent-metadata</artifactId>
+        <artifactId>jboss-metadata-source-transform-parent</artifactId>
         <version>14.0.0.Beta2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>jboss-metadata-common</artifactId>
+    <artifactId>jboss-metadata-common-jakarta</artifactId>
     <packaging>jar</packaging>
 
-    <name>JBoss Metadata Common</name>
+    <name>JBoss Metadata Common (Jakarta Namespace)</name>
+
+    <properties>
+        <transformer-input-dir>${project.basedir}/../../common</transformer-input-dir>
+    </properties>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>
-                                <exclude>org/jboss/test/metadata/javaee/*TestCase.class</exclude>
-                                <exclude>org/jboss/test/metadata/javaee/*TestCase$*.class</exclude>
-                                <exclude>org/jboss/test/metadata/javaee/*.xml</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
