--- a/source-transform/pom.xml
+++ b/source-transform/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.jboss.metadata</groupId>
         <artifactId>jboss-as-parent-metadata</artifactId>
-        <version>14.0.0.Beta2-SNAPSHOT</version>
+        <version>14.0.0.Beta2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
