--- a/source-transform/ejb/pom.xml
+++ b/source-transform/ejb/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jboss.metadata</groupId>
         <artifactId>jboss-metadata-source-transform-parent</artifactId>
-        <version>15.1.0.Alpha2</version>
+        <version>15.1.0.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 	
