--- a/source-transform/pom.xml
+++ b/source-transform/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.jboss.metadata</groupId>
         <artifactId>jboss-as-parent-metadata</artifactId>
-        <version>15.1.0.Final-SNAPSHOT</version>
+        <version>15.1.0.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
